crates/cella-codegen/src/snapshots/cella_codegen__tests__emit_docs_true.snap
---
source: crates/cella-codegen/src/lib.rs
expression: result
---
use std::collections::HashMap;
#[derive(Debug, Clone)]
pub struct ValidationError {
    pub path: String,
    pub message: String,
    pub kind: ValidationErrorKind,
}
#[derive(Debug, Clone, PartialEq, Eq)]
pub enum ValidationErrorKind {
    TypeError,
    MissingRequired,
    UnknownField,
    InvalidEnumValue,
    MutuallyExclusive,
    OutOfRange,
    PatternMismatch,
    ConstraintViolation,
}
impl std::fmt::Display for ValidationError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}: {}", self.path, self.message)
    }
}
impl std::error::Error for ValidationError {}
///A person record
#[derive(Debug, Clone)]
pub struct Root {
    ///The person's name
    pub name: Option<String>,
}
impl Root {
    pub fn validate(
        value: &serde_json::Value,
        path: &str,
    ) -> Result<Self, Vec<ValidationError>> {
        let obj = value
            .as_object()
            .ok_or_else(|| {
                vec![
                    ValidationError { path : path.to_string(), message :
                    "expected object".to_string(), kind : ValidationErrorKind::TypeError,
                    }
                ]
            })?;
        let mut errors: Vec<ValidationError> = Vec::new();
        let name = if let Some(v) = obj.get("name") {
            let field_path = format!("{path}/{}", "name");
            match v
                .as_str()
                .map(String::from)
                .ok_or_else(|| {
                    vec![
                        ValidationError { path : field_path.to_string(), message :
                        "expected string".to_string(), kind :
                        ValidationErrorKind::TypeError, }
                    ]
                })
            {
                Ok(val) => Some(val),
                Err(mut e) => {
                    errors.append(&mut e);
                    None
                }
            }
        } else {
            None
        };
        if errors.is_empty() { Ok(Self { name }) } else { Err(errors) }
    }
}
