crates/cella-codegen/src/snapshots/cella_codegen__tests__enum_only_schema.snap
---
source: crates/cella-codegen/src/lib.rs
expression: result
---
use std::collections::HashMap;
#[derive(Debug, Clone)]
pub struct ValidationError {
    pub path: String,
    pub message: String,
    pub kind: ValidationErrorKind,
}
#[derive(Debug, Clone, PartialEq, Eq)]
pub enum ValidationErrorKind {
    TypeError,
    MissingRequired,
    UnknownField,
    InvalidEnumValue,
    MutuallyExclusive,
    OutOfRange,
    PatternMismatch,
    ConstraintViolation,
}
impl std::fmt::Display for ValidationError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}: {}", self.path, self.message)
    }
}
impl std::error::Error for ValidationError {}
pub type Root = serde_json::Value;
