crates/cella-codegen/src/snapshots/cella_codegen__tests__schema_with_definitions_and_ref.snap
---
source: crates/cella-codegen/src/lib.rs
expression: result
---
use std::collections::HashMap;
#[derive(Debug, Clone)]
pub struct ValidationError {
    pub path: String,
    pub message: String,
    pub kind: ValidationErrorKind,
}
#[derive(Debug, Clone, PartialEq, Eq)]
pub enum ValidationErrorKind {
    TypeError,
    MissingRequired,
    UnknownField,
    InvalidEnumValue,
    MutuallyExclusive,
    OutOfRange,
    PatternMismatch,
    ConstraintViolation,
}
impl std::fmt::Display for ValidationError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}: {}", self.path, self.message)
    }
}
impl std::error::Error for ValidationError {}
#[derive(Debug, Clone)]
pub struct Address {
    pub city: Option<String>,
    pub street: Option<String>,
}
#[derive(Debug, Clone)]
pub struct Root {
    pub home_address: Option<Address>,
}
impl Address {
    pub fn validate(
        value: &serde_json::Value,
        path: &str,
    ) -> Result<Self, Vec<ValidationError>> {
        let obj = value
            .as_object()
            .ok_or_else(|| {
                vec![
                    ValidationError { path : path.to_string(), message :
                    "expected object".to_string(), kind : ValidationErrorKind::TypeError,
                    }
                ]
            })?;
        let mut errors: Vec<ValidationError> = Vec::new();
        let city = if let Some(v) = obj.get("city") {
            let field_path = format!("{path}/{}", "city");
            match v
                .as_str()
                .map(String::from)
                .ok_or_else(|| {
                    vec![
                        ValidationError { path : field_path.to_string(), message :
                        "expected string".to_string(), kind :
                        ValidationErrorKind::TypeError, }
                    ]
                })
            {
                Ok(val) => Some(val),
                Err(mut e) => {
                    errors.append(&mut e);
                    None
                }
            }
        } else {
            None
        };
        let street = if let Some(v) = obj.get("street") {
            let field_path = format!("{path}/{}", "street");
            match v
                .as_str()
                .map(String::from)
                .ok_or_else(|| {
                    vec![
                        ValidationError { path : field_path.to_string(), message :
                        "expected string".to_string(), kind :
                        ValidationErrorKind::TypeError, }
                    ]
                })
            {
                Ok(val) => Some(val),
                Err(mut e) => {
                    errors.append(&mut e);
                    None
                }
            }
        } else {
            None
        };
        if errors.is_empty() { Ok(Self { city, street }) } else { Err(errors) }
    }
}
impl Root {
    pub fn validate(
        value: &serde_json::Value,
        path: &str,
    ) -> Result<Self, Vec<ValidationError>> {
        let obj = value
            .as_object()
            .ok_or_else(|| {
                vec![
                    ValidationError { path : path.to_string(), message :
                    "expected object".to_string(), kind : ValidationErrorKind::TypeError,
                    }
                ]
            })?;
        let mut errors: Vec<ValidationError> = Vec::new();
        let home_address = if let Some(v) = obj.get("home_address") {
            let field_path = format!("{path}/{}", "home_address");
            match Address::validate(v, &field_path) {
                Ok(val) => Some(val),
                Err(mut e) => {
                    errors.append(&mut e);
                    None
                }
            }
        } else {
            None
        };
        if errors.is_empty() { Ok(Self { home_address }) } else { Err(errors) }
    }
}
